# mlb-ml-lab

./: .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: pylint.yml  python-publish.yml
pipeline/: __init__.py  assemble.py  backtest.py  bagging_mt.py  benchmark_mlx.py  compare_hidden_dim.py  context.py  dcn_ensemble.py  ensemble.py  forecast.py  game_aggregation.py  gated_ensemble.py  harvest_dataset.py  matchup.py  odds_backtest.py  predict.py  rolling.py  run_end_to_end.py  statcast.py  targets.py  test_odds_match.py  train.py  train_dcn.py  train_mt.py  train_seq.py  train_transformer.py  transformer_ensemble.py  tune.py
src/mibl/: __init__.py
src/mibl/data/: __init__.py  cache.py  client.py  parks.py  rate_limiter.py  schemas.py  weather.py
src/mibl/features/: __init__.py  assemble.py  context.py  forecast.py  matchup.py  rolling.py  statcast.py
src/mlb_ml_lab/: __init__.py
src/mlb_ml_lab/cli/: main.py
src/mlb_ml_lab/data/: __init__.py  cache.py  client.py  meteostat_weather.py  odds.py  parks.py  rate_limiter.py  schemas.py  weather.py
src/mlb_ml_lab/evaluation/: __init__.py  backtest.py
src/mlb_ml_lab/features/: __init__.py  assemble.py  base.py  bullpen.py  context.py  forecast.py  gamepace.py  league.py  matchup.py  odds_features.py  pbp_features.py  pitching.py  player.py  rolling.py  rolling_advanced.py  rolling_statcast.py  schedule.py  statcast.py  streaks.py  team_trends.py  teamleaders.py
src/mlb_ml_lab/models/: __init__.py  evaluate.py  mlx_nn.py  sequence.py  train.py
src/mlb_ml_lab/simulation/: outcomes.py  re24.py  simulator.py
tests/: conftest.py  test_package_init.py
tests/data/: test_cache.py  test_client.py  test_parks.py  test_rate_limiter.py  test_schemas.py  test_weather.py
tests/evaluation/: test_backtest.py
tests/features/: test_assemble.py  test_context.py  test_forecast.py  test_matchup.py  test_rolling.py  test_targets.py
tests/fixtures/: angels_hitting_stats_2025.json  angels_roster_2025.json  expected_stats_2025.csv  game_boxscore_778554.json  game_feed_778554.json  kikuchi_pitching_season_2025.json  nws_forecast.json  nws_hourly_forecast.json  nws_points.json  standings_2025.json  statcast_batters_2025.csv  trout_gamelog_2025.json  trout_player_2025.json  venue_1.json  venue_coords.json
tests/models/: test_mlx_nn.py  test_train.py
tests/pipeline/: test_assemble.py  test_context.py  test_forecast.py  test_matchup.py  test_rolling.py  test_targets.py
