[tool.poetry]
name = "mlb-ml-lab"
version = "0.1.0"
description = "MLB prediction models and data tools"
authors = ["Tim Hollingsworth"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/timhollingsworth/mlb-ml-lab"
keywords = ["mlb", "baseball", "prediction", "sports-betting", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "mlb_ml_lab", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
httpx = "^0.28"
scikit-learn = "^1.9.0"
xgboost = "^3.3.0"
lightgbm = "^4.6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
ruff = ">=0.5"
pylint = "^4.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
